Major style fixes

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -42,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:fontFamily="@font/abril_fatface"
                     android:hint="Enter Email"
                     android:inputType="textEmailAddress"
                     android:textColor="@android:color/white"
@@ -50,10 +51,11 @@
 
                 <Button
                     android:id="@+id/btn_reset_password"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@color/BLACKS_black"
+                    android:background="@color/text"
+                    android:fontFamily="@font/abril_fatface"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="Reset Password"
@@ -66,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@color/BLACKS_black"
+                    android:background="@color/text"
+                    android:fontFamily="@font/abril_fatface"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="go back"
