--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.android.folio.AnalysisActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SCREW THIS"/>
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,14 +20,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_analysis" />
+    <include
+        layout="@layout/content_analysis"
+        android:layout_width="380dp"
+        tools:layout_editor_absoluteX="4dp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
