--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/signInPage"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/background">
@@ -34,8 +33,8 @@
 
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="150dp"
+                    android:layout_height="127dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="70sp"
                     android:src="@mipmap/ic_launcher" />
@@ -70,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="@color/text"
-                    android:fontFamily="@font/bungee_inline"
+                    android:fontFamily="@font/abril_fatface"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="@string/sign_in"
@@ -99,25 +98,6 @@
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/linearLayout"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="450dp"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:fontFamily="@font/leckerli_one"
-        android:inputType="textPersonName"
-        android:text="folio"
-        android:textAlignment="center"
-        android:textColor="@color/text"
-        android:textSize="30dp" />
 
 </RelativeLayout>
 
