--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="BLACKS_white">#FFF</color>
     <color name="BLACKS_lightslategrey">#778899</color>
 
-    <color name="background">#37474F</color>
+    <color name="background">#000000</color>
     <color name="text">#A9A9A9</color>
 
 
