--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
-    android:background="@color/background">
+    android:background="@drawable/backgroundfolio">
 
     <LinearLayout
         android:layout_centerVertical="true"
